Harden playback auth and proxy

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,12 @@ EMBY_USER_ID=your_emby_user_id
 
 # TMDB Configuration
 TMDB_READ_TOKEN=your_tmdb_read_token
+
+# Playback Password Gate (optional)
+AUTH_PASSWORD=ydydme
+# IMPORTANT: set a strong secret in production (random 32+ chars)
+AUTH_SECRET=change_me
+# 30 days by default
+AUTH_TOKEN_TTL_SECONDS=2592000
+# Set to 1 when serving over HTTPS
+COOKIE_SECURE=0
